--- a/Ngps.WebUI/Views/Shared/_Layout2.cshtml
+++ b/Ngps.WebUI/Views/Shared/_Layout2.cshtml
@@ -8,7 +8,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="http://cdn.bootcss.com/angular.js/1.5.8/angular.js"></script>
-    <script src="~/Scripts/ng.js"></script>
+    <script src="~/NgScript/Common/app.js"></script>
     @RenderSection("scriptshead", required: false)
 </head>
 <body>
